--- a/Languages/English/Keyed/RimRound_Keys.xml
+++ b/Languages/English/Keyed/RimRound_Keys.xml
@@ -82,6 +82,7 @@
 	<RR_Mtw_GeneralSettings_PreferDefaultOverNaked>Default clothing over naked</RR_Mtw_GeneralSettings_PreferDefaultOverNaked>
 	<RR_Mtw_GeneralSettings_AlternateNorthHeadDepthForRRBodies>Use alternate head placement</RR_Mtw_GeneralSettings_AlternateNorthHeadDepthForRRBodies>
 	<RR_Mtw_GeneralSettings_UseZoomPortraitStyle>Use vanilla portrait style</RR_Mtw_GeneralSettings_UseZoomPortraitStyle>
+	<RR_Mtw_GeneralSettings_MoodletsForWeightOpinions>Give moodlets for weight opinions</RR_Mtw_GeneralSettings_MoodletsForWeightOpinions>
 
 	<RR_Mtw_GizmoSettingsTitle>Gizmo Settings</RR_Mtw_GizmoSettingsTitle>
 	
