Start work on varying weight per stage by body size: [*] Add option to toggle this new feature in general settings (may not work for all cases)
Add ability to see sleep position and blanket gizmos for prisoners

Refactor pawn generation patches into three sperate ones more closely related to their purpose
Add two patches for the HAR framework to fix bugs created by this refactor

"""fix""" an issue with the food validator for the feeding tube blowing up the log :^)

--- a/Languages/English/Keyed/RimRound_Keys.xml
+++ b/Languages/English/Keyed/RimRound_Keys.xml
@@ -83,6 +83,8 @@
 	<RR_Mtw_GeneralSettings_AlternateNorthHeadDepthForRRBodies>Use alternate head placement</RR_Mtw_GeneralSettings_AlternateNorthHeadDepthForRRBodies>
 	<RR_Mtw_GeneralSettings_UseZoomPortraitStyle>Use vanilla portrait style</RR_Mtw_GeneralSettings_UseZoomPortraitStyle>
 	<RR_Mtw_GeneralSettings_MoodletsForWeightOpinions>Give moodlets for weight opinions</RR_Mtw_GeneralSettings_MoodletsForWeightOpinions>
+	<RR_Mtw_GeneralSettings_VaryMinWeightForBodyTypeByBodySize>Vary weight requirements by bodysize</RR_Mtw_GeneralSettings_VaryMinWeightForBodyTypeByBodySize>
+
 
 	<RR_Mtw_GizmoSettingsTitle>Gizmo Settings</RR_Mtw_GizmoSettingsTitle>
 	
