Fix pawns in hoverchairs not laying in beds properly Add feature pawns drop hoverchair on pawn downing. This should help prevent bugs wherein doctors will not tend or cannot rescue colonists in hoverchairs. Reminder that the "Dress Patients" mod can be used to redress them while they are in bed. Add option tab in RR menu to alter hediff effect severity including pain, eat speed reduction and move speed reduction from the fullness hediff as well as moving, manipulation, rest fall rate and increased hunger rate from the weight hediff Add auto disable texture caching on load Fix pawns spawning with custom bodies as their default bodies. DefaultBody is now a property and reverts susceptible pawns to the thin bodytype. Update fullness hediff to use custom class Reduce hoverchair weight from 110 to 0 so as not to overencumber pawns Optimize RR menu so that number fields with custom behavior now only trigger when the value is changed. Update changelog
Add test material for flesh atlas

--- a/Languages/English/Keyed/RimRound_Keys.xml
+++ b/Languages/English/Keyed/RimRound_Keys.xml
@@ -85,6 +85,14 @@
 	<RR_Mtw_GeneralSettings_MoodletsForWeightOpinions>Give moodlets for weight opinions</RR_Mtw_GeneralSettings_MoodletsForWeightOpinions>
 	<RR_Mtw_GeneralSettings_VaryMinWeightForBodyTypeByBodySize>Vary weight requirements by bodysize</RR_Mtw_GeneralSettings_VaryMinWeightForBodyTypeByBodySize>
 
+	<RR_Hsw_HediffNumericSettings_SettingsTitle>Hediff effect multipliers</RR_Hsw_HediffNumericSettings_SettingsTitle>
+	<RR_Hsw_HediffNumericSettings_weightHediffHungerRateMult>Weight: hunger rate multiplier</RR_Hsw_HediffNumericSettings_weightHediffHungerRateMult>
+	<RR_Hsw_HediffNumericSettings_weightHediffManipulationPenaltyMult>Weight: manipulation penalty multiplier</RR_Hsw_HediffNumericSettings_weightHediffManipulationPenaltyMult>
+	<RR_Hsw_HediffNumericSettings_weightHediffMovementPenaltyMult>Weight: movement penalty multiplier</RR_Hsw_HediffNumericSettings_weightHediffMovementPenaltyMult>
+	<RR_Hsw_HediffNumericSettings_weightHediffRestRateMult>Weight: rest fall rate multiplier</RR_Hsw_HediffNumericSettings_weightHediffRestRateMult>
+	<RR_Hsw_HediffNumericSettings_fullnessHediffEatingPenaltyMult>Fullness: eating rate penalty multiplier</RR_Hsw_HediffNumericSettings_fullnessHediffEatingPenaltyMult>
+	<RR_Hsw_HediffNumericSettings_fullnessHediffMovementPenaltyMult>Fullness: movement penalty multiplier</RR_Hsw_HediffNumericSettings_fullnessHediffMovementPenaltyMult>
+	<RR_Hsw_HediffNumericSettings_fullnessHediffPainMult>Fullness: pain multiplier</RR_Hsw_HediffNumericSettings_fullnessHediffPainMult>
 
 	<RR_Mtw_GizmoSettingsTitle>Gizmo Settings</RR_Mtw_GizmoSettingsTitle>
 	
