--- a/Languages/English/Keyed/RimRound_Keys.xml
+++ b/Languages/English/Keyed/RimRound_Keys.xml
@@ -252,4 +252,44 @@
 	<RR_Desc_F_Ratkin_G9>Climbing the fatter parts of {0}'s monstrous tail, which extend as high as fifty feet in some areas, is an insurmountable task in its own right, but running its entire length would take an athletic person several minutes, with twists, dips, turns and coils stretching so far out into the wilds that nearby colonies could mistake them for an absolutely colossal snake in its own right. Ignoring the logic of what it would take to lift such a stupendously heavy tail, if {0} were able to do so, and slam it back down, the resulting earthquake could shift tectonic plates across the entire region, damaging buildings for miles, and reminding everyone in earshot that this giant rat can most certainly make all of the rules, but that the only one they must follow is to bring them more food.</RR_Desc_F_Ratkin_G9>
 
 
+	<!--Perk translation-->
+	<RR_PerkTabLabel>Perks</RR_PerkTabLabel>
+	<RR_PerkTab_Title>Perks</RR_PerkTab_Title>
+	<RR_Basic_Perks_Title>Basic Perks</RR_Basic_Perks_Title>
+	<RR_Advanced_Perks_Title>Advanced Perks</RR_Advanced_Perks_Title>
+	<RR_Elite_Perks_Title>Elite Perks</RR_Elite_Perks_Title>
+	<RR_Ultimate_Perks_Title>Ultimate Perks</RR_Ultimate_Perks_Title>
+	<RR_Abilities_Title>Abilities</RR_Abilities_Title>
+	
+	<RR_Ample_Appetite_Title>Ample Appetite</RR_Ample_Appetite_Title>
+	<RR_Apex_Absorption_Title>Apex Absorption</RR_Apex_Absorption_Title>
+	<RR_Ascension_Icon_Title>Ascension</RR_Ascension_Icon_Title>
+	<RR_Beautiful_Bulk_Title>Beautiful Bulk</RR_Beautiful_Bulk_Title>
+	<RR_Breakneck_Buffet_Title>Breakneck Buffet</RR_Breakneck_Buffet_Title>
+	<RR_Bulletproof_Blob_Title>Bulletproof Blob</RR_Bulletproof_Blob_Title>
+	<RR_Comfortable_Corpulence_Title>Comfortable Corpulence</RR_Comfortable_Corpulence_Title>
+	<RR_Culinary_Connisseur_Title>Culinary Connisseur</RR_Culinary_Connisseur_Title>
+	<RR_Demonic_Devourment_Title>Demonic Devourment</RR_Demonic_Devourment_Title>
+	<RR_Diet_Plan_Title>Diet Plan</RR_Diet_Plan_Title>
+	<RR_Digestion_Beyond_Question_Title>Digestion Beyond Question</RR_Digestion_Beyond_Question_Title>
+	<RR_Endless_Indulgence_Title>Endless Indulgence</RR_Endless_Indulgence_Title>
+	<RR_Even_Further_Beyond_Title>Further Beyond</RR_Even_Further_Beyond_Title>
+	<RR_Fat_Furnace_Title>Fat Furnace</RR_Fat_Furnace_Title>
+	<RR_FoldsOfHeaven_Title>Folds of Heaven</RR_FoldsOfHeaven_Title>
+	<RR_GigaGurgling_Title>Giga Gurgling</RR_GigaGurgling_Title>
+	<RR_GluttonyIncarnate_Title>Gluttony Incarnate</RR_GluttonyIncarnate_Title>
+	<RR_HeavyRevian_Title>Heavy Revian</RR_HeavyRevian_Title>
+	<RR_ItsComingThisWay_Title>It's Coming This Way!</RR_ItsComingThisWay_Title>
+	<RR_LimitBreak_Title>Limit Break</RR_LimitBreak_Title>
+	<RR_MakesAllTheRules_Title>Makes All The Rules</RR_MakesAllTheRules_Title>
+	<RR_NoPainStillGain_Title>No Pain, Still Gain</RR_NoPainStillGain_Title>
+	<RR_PaunchPower_Title>Paunch Power</RR_PaunchPower_Title>
+	<RR_PracticalProblems_Title>Practical Problems</RR_PracticalProblems_Title>
+	<RR_RotundRegeneration_Title>Rotund Regeneration</RR_RotundRegeneration_Title>
+	<RR_SquareOne_Title>Square One</RR_SquareOne_Title>
+	<RR_TitanicTank_Title>Titanic Tank</RR_TitanicTank_Title>
+	<RR_Voracious_Title>Voracious</RR_Voracious_Title>
+	<RR_WeLikeToParty_Title>We Like To Party</RR_WeLikeToParty_Title>
+	<RR_WeightGain4000_Title>Weight Gain 4000</RR_WeightGain4000_Title>
+	<RR_WellInsulated_Title>Well Insulated</RR_WellInsulated_Title>
 </LanguageData>
