--- a/Languages/English/Keyed/RimRound_Keys.xml
+++ b/Languages/English/Keyed/RimRound_Keys.xml
@@ -69,7 +69,7 @@
 	<RR_Mtw_GlobalTicksBetweenWeightGainRequestProcess>Ticks between WG requests</RR_Mtw_GlobalTicksBetweenWeightGainRequestProcess>
 	<RR_Mtw_meatMultiplierForWeight>Meat/skin yield multiplier</RR_Mtw_meatMultiplierForWeight>
 	<RR_Mtw_milkMultiplierForWeight>Milk multiplier for weight</RR_Mtw_milkMultiplierForWeight>
-
+	<RR_Mtw_maxVisualSizeGelLevel>Max Gelatinous level (visual)</RR_Mtw_maxVisualSizeGelLevel>
 	<RR_Mtw_minForCapableMovement>Min. for capable (movement)</RR_Mtw_minForCapableMovement>
 
 	<RR_Mtw_BodyChangeExemptionSettingsTitle>Body Change Settings</RR_Mtw_BodyChangeExemptionSettingsTitle>
@@ -91,6 +91,7 @@
 	<RR_Mtw_GeneralSettings_ShowSpecialDebugSettings>Show special debug settings</RR_Mtw_GeneralSettings_ShowSpecialDebugSettings>
 	<RR_Mtw_GeneralSettings_UseLegacyLardySprite>Use legacy lardy sprite</RR_Mtw_GeneralSettings_UseLegacyLardySprite>
 	<RR_Mtw_GeneralSettings_OnlyUseStandardSprites>Only use standard sprites</RR_Mtw_GeneralSettings_OnlyUseStandardSprites>
+	<RR_Mtw_GeneralSettings_hidePacksForCustomBodies>Hide pack items for custom bodies</RR_Mtw_GeneralSettings_hidePacksForCustomBodies>
 
 	<RR_Hsw_HediffNumericSettings_SettingsTitle>Hediff effect multipliers</RR_Hsw_HediffNumericSettings_SettingsTitle>
 	<RR_Hsw_HediffNumericSettings_weightHediffHungerRateMult>Weight: hunger rate multiplier</RR_Hsw_HediffNumericSettings_weightHediffHungerRateMult>
