Add two new settings regarding perk balancing

--- a/Languages/English/Keyed/RimRound_Keys.xml
+++ b/Languages/English/Keyed/RimRound_Keys.xml
@@ -71,6 +71,8 @@
 	<RR_Mtw_milkMultiplierForWeight>Milk multiplier for weight</RR_Mtw_milkMultiplierForWeight>
 	<RR_Mtw_maxVisualSizeGelLevel>Max Gelatinous level (visual)</RR_Mtw_maxVisualSizeGelLevel>
 	<RR_Mtw_minForCapableMovement>Min. for capable (movement)</RR_Mtw_minForCapableMovement>
+	<RR_Mtw_nutritionPerLevel>Nutrition required per level</RR_Mtw_nutritionPerLevel>
+	<RR_Mtw_levelsGainedPerLevel>Levels gained on level up</RR_Mtw_levelsGainedPerLevel>
 
 	<RR_Mtw_BodyChangeExemptionSettingsTitle>Body Change Settings</RR_Mtw_BodyChangeExemptionSettingsTitle>
 	<RR_Mtw_BodyChangeExemptionSettings_Male>Dynamic bodies for Males</RR_Mtw_BodyChangeExemptionSettings_Male>
